# cc-dj

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: commands.yaml  dj.yaml  gesture_mappings.yaml  validate_commands.sh
crates/cc-dj-auto/: Cargo.toml
crates/cc-dj-auto/src/: analyzer.rs  lib.rs  mixer.rs  strategy.rs  transition.rs
crates/cc-dj-control/: Cargo.toml
crates/cc-dj-control/src/: deck.rs  executor.rs  lib.rs  scheduler.rs
crates/cc-dj-control/src/bridge/: mod.rs  rekordbox.rs  serato.rs
crates/cc-dj-control/tests/: integration_test.rs
crates/cc-dj-gesture/: Cargo.toml
crates/cc-dj-gesture/src/: database.rs  dj_recognizer.rs  lib.rs  recognizer.rs  trainer.rs  types.rs
crates/cc-dj-live/: Cargo.toml
crates/cc-dj-live/src/: main.rs  web.rs
crates/cc-dj-types/: Cargo.toml
crates/cc-dj-types/src/: action.rs  command.rs  config.rs  error.rs  lib.rs  state.rs
crates/cc-dj-voice/: Cargo.toml
crates/cc-dj-voice/src/: controller.rs  intent.rs  lib.rs  mic.rs  orbiter.rs  semantic.rs
docs/: index.html
web/: index.html  vercel.json
web/css/: actions.css  animations.css  deck.css  main.css  mixer.css  voice.css
web/js/: actions.js  app.js  canvas.js  config.js  deck.js  mixer.js  voice.js  ws.js
