[package]
name = "cc-dj-gesture"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Gesture recognition for DJ agent"

[lib]
name = "cc_dj_gesture"
crate-type = ["rlib"]

[dependencies]
cc-dj-types = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
