[package]
name = "cc-dj-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Voice control for DJ agent using Gemini Live API"

[lib]
name = "cc_dj_voice"
crate-type = ["rlib"]

[dependencies]
cc-dj-types = { workspace = true }
cc-gemini = { workspace = true }

tokio = { workspace = true }
cpal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
